Line breaking should not occur before punctuation, even when preceded by space
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox121 | --- | fixed |
People
(Reporter: vincent-moz, Assigned: m_kato)
References
(Blocks 1 open bug, )
Details
(Keywords: testcase)
Attachments
(3 files)
Reporter | ||
Comment 1•15 years ago
|
||
![]() |
||
Comment 3•15 years ago
|
||
Comment 4•15 years ago
|
||
Comment 5•15 years ago
|
||
Comment 6•15 years ago
|
||
Comment 7•15 years ago
|
||
Reporter | ||
Updated•15 years ago
|
Updated•3 years ago
|
Assignee | ||
Comment 8•2 years ago
|
||
As long as I test, this is already fixed by bug 1719535.
Reporter | ||
Comment 9•2 years ago
|
||
(In reply to Makoto Kato [:m_kato] from comment #8)
As long as I test, this is already fixed by bug 1719535.
In which FF version? According to bug 1719535, this seems to be fixed in 118, but with Firefox 118.0 under Linux, the bug still occurs. See attached screenshot for the testcase of this bug.
Reporter | ||
Comment 10•2 years ago
|
||
And I can still reproduce the bug with Nightly 120.0a1 (2023-10-01).
Assignee | ||
Comment 11•2 years ago
|
||
(In reply to Vincent Lefevre from comment #10)
And I can still reproduce the bug with Nightly 120.0a1 (2023-10-01).
Thank you for testing. OK, I will reopen this
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 12•2 years ago
|
||
data:text/html,<div style="width: 1px;">test !</div>
seems to be simple test case. ICU4X can handle correctly, so this issue is layout side.
Assignee | ||
Comment 13•2 years ago
|
||
Assignee | ||
Comment 14•2 years ago
|
||
Legacy segmenter breaks line by some Break After properties. But UAX#14 rule
doesn't break Break After (BA) at force.
So I would like to remove some legacy rules that isn't ASCII white space from
nsLineBreaker
.
Updated•2 years ago
|
Comment 15•2 years ago
|
||
Comment 17•2 years ago
|
||
bugherder |
Description
•