Bug 628825 - Don't break line by Break After. r=TYLin,jfkthame

Legacy segmenter breaks line by some Break After properties. But UAX#14 rule
doesn't break Break After (BA) at force.

So I would like to remove some legacy rules that isn't ASCII white space from
`nsLineBreaker`.

Differential Revision: https://phabricator.services.mozilla.com/D192174